k8s/customer_service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cse-customer-service
  labels:
    app: cse-customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cse-customer-service
  template:
    metadata:
      labels:
        app: cse-customer-service
    spec:
      containers:
        - name: cse-customer-service
          image: joeg7/customer_service:0.1.0 
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1Gi"
              cpu: "100m"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: cse-customer-service
  labels:
    app: cse-customer-service
spec:
  selector:
    app: cse-customer-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
