k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq
  labels:
    app: cse-rabbit-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cse-rabbit-mq
  template:
    metadata:
      labels:
        app: cse-rabbit-mq
    spec:
      containers:
        - name: cse-rabbit-mq
          image: rabbitmq:3.9-management
          ports:
          - containerPort: 5672
          resources:  
            limits:
              memory: "1Gi"
              cpu: "100m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: cse-rabbit-mq
spec:
  selector:
    app: cse-rabbit-mq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
  type: ClusterIP
