k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: cse-ingress
spec:
    ingressClassName: nginx
    rules:
      - host: localhost
        http:
          paths:
          - path: /register_bet
            pathType: Prefix
            backend:
              service:
                name: cse-customer-service
                port:
                  number: 8080
          - path: /show_results
            pathType: Prefix
            backend:
              service:
                name: cse-customer-service
                port:
                  number: 8080
          - path: /trigger_draw
            pathType: Prefix
            backend:
              service:
                name: cse-drawing-service
                port:
                  number: 8080
